# lerobot-teleoperator-rebot-arm-102

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: read_leader_follower_compare.py  read_raw_angles.py  test_leader.py
lerobot_teleoperator_fasionstar_pipermate/: __init__.py  config_fasionstar_pipermate_leader.py  fasionstar_pipermate_leader.py
lerobot_teleoperator_rebot_arm_102/: __init__.py  bi_rebot_arm_102_leader.py  config_bi_rebot_arm_102_leader.py  config_rebot_arm_102_leader.py  rebot_arm_102_leader.py  streaming_dataset.py
lerobot_teleoperator_rebot_arm_102/scripts/: record_rebot_arm_102.py
